--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             </div>
             <div id="content" class="b3" style="display: none;">
                 <div class="d1" style="font-size: 23px;">
-                    Free Online JavaScript Obfuscator
+                    Free Online <a href="https://www.js-obfuscator.com/" target="_blank" style="cursor: default;">JavaScript Obfuscator</a>
                 </div>
                 <div class="text" style="margin-top: 0px;">
                     a simple JavaScript obfuscation tool
